// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberCardInfo /> обычный режим должен показывать аватар 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="avatar"
      >
        <Link
          target="_blank"
          theme="normal"
          url="//staff.yandex-team.ru/username"
        >
          <Connect(Avatar)
            size={46}
            url="//center.yandex-team.ru/user/avatar/username/100/square"
          />
        </Link>
      </div>
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody />
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать коммандировки/отсутствия 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody />
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
    <div
      className="status"
      style={
        Object {
          "backgroundColor": "#73c9eb",
        }
      }
    >
      <Link
        cls="statusLink"
        target="_blank"
        theme="normal"
        url="//staff.yandex-team.ru/gap/tavria/"
      >
        ggwp
      </Link>
    </div>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать мобильный телефон 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.mobilePhone
          </td>
          <td>
            +71234567890
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать основной контект вместо спиннера 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody />
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать подразделение 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          dep_name
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody />
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать позицию 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          Position. 
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody />
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать последнее рабочее место 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.onlineMale
          </td>
          <td>
            Last_office_ago
            , 
            last_office
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать последнее рабочее место для девушки 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.onlineFemale
          </td>
          <td>
            Last_office_ago
            , 
            last_office
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать рабочее место 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.office
          </td>
          <td>
            office
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать рабочий телефон 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.workPhone
          </td>
          <td>
            1234
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/undefined"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> обычный режим должен показывать рабочую почту 1`] = `
<div
  className="wrap"
>
  <div>
    <div
      className="container"
    >
      <div
        className="header"
      >
        <Link
          cls="title"
          target="_blank"
          theme="black"
          url="//staff.yandex-team.ru/username"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "first_name last_name",
              }
            }
          />
        </Link>
        <a
          className="position"
          href="//staff.yandex-team.ru/username"
          rel="noopener noreferrer"
          target="_blank"
          title="memberCard.staff"
        >
          <span
            className="staffIcon"
          >
            <SVGIcon
              glyph="meeting"
            />
          </span>
        </a>
      </div>
    </div>
    <table
      className="properties"
    >
      <tbody>
        <tr>
          <td>
            memberCard.email
          </td>
          <td>
            username@yandex-team.ru
          </td>
        </tr>
      </tbody>
    </table>
    <Link
      className="scheduleLink"
      replace={false}
      target="_blank"
      to="/person/username@yandex-team.ru"
    >
      <Link
        theme="normal"
      >
        memberCard.scheduleLink
      </Link>
    </Link>
  </div>
</div>
`;

exports[`<MemberCardInfo /> режим загрузки должен показывать спиннер вместо основного контента 1`] = `
<div
  className="wrap"
>
  <div
    className="loading"
  >
    <Spin
      size="m"
      theme="normal"
    />
  </div>
</div>
`;
